--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   get_storage: ^2.1.1
   http: ^1.3.0
   intl: ^0.18.1
+  get_it: null
   logger: ^2.0.1
   image_picker: ^1.0.7
   connectivity_plus: ^5.0.1
