--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
   new_ui_kit:
     path: ./myplugins
 
@@ -53,7 +55,7 @@ dependencies:
   get: ^4.6.5
   get_storage: ^2.1.1
   http: ^1.3.0
-  intl: ^0.18.1
+  intl: ^0.19.0
   get_it: null
   logger: ^2.0.1
   image_picker: ^1.0.7
